# breast-cancer-prediction

./: .gitignore  README.md  launch.py.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-debug.yml  ci.yml
scripts/: dashboard.css  dashboard.py  visualize.py
src/breast_cancer_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: loader.py
src/gui/: dashboard.py
src/models/: logistic.py
src/utils/: plotting.py
tests/: test_loader.py  test_logistic.py  test_plotting.py
