[project]
name = "breast-cancer-prediction"
version = "0.1.0"
description = "Predict whether a breast tumor is benign or malignant using scikit-learn"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.3.0",
  "scikit-learn>=1.7.0",
  "matplotlib>=3.10.3",
  "seaborn>=0.12.0",
  "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "flake8>=6.0.0",
  "pytest>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

